<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Ramp Up</string>

    <string name="title_user_interface">User Interface</string>
    <string name="summary_user_interface">Basic user interface examples</string>

    <string name="pref_title_basic_user_interface">Basic</string>
    <string name="pref_summary_basic_user_interface">Basics of View interaction</string>

    <string name="pref_title_simple_list_adapter">ListView</string>
    <string name="pref_summary_simple_list_adapter">Populating lists using Adapters</string>

    <string name="pref_title_cursor_adapter">CursorAdaptor</string>
    <string name="pref_summary_cursor_adapter">Populating lists dynamically from data using a CursorAdapter</string>

    <string name="pref_title_view_pager">View Pager</string>
    <string name="pref_summary_view_pager">Switching between Views using the ViewPager</string>

    <string name="pref_title_fragments">Fragments</string>
    <string name="pref_summary_fragments">Using Fragments to build reusable UI components</string>

    <string name="pref_title_action_bar">Action Bar</string>
    <string name="pref_summary_action_bar">Using the Action Bar from the support libraries</string>

    <string name="title_execution_control">Execution Control</string>
    <string name="summary_execution_control">Android-specific execution and invocation patterns</string>

    <string name="pref_title_intents">Intents</string>
    <string name="pref_summary_intents">Using Intents for execution control inside of an application</string>

    <string name="pref_title_actions">Actions</string>
    <string name="pref_summary_actions">General action Intents to invoke platform functionality</string>

    <string name="pref_title_handlers">Handlers</string>
    <string name="pref_summary_handlers">Building asynchronous behaviour with messages and handlers</string>

    <string name="pref_title_broadcasts">Broadcasts</string>
    <string name="pref_summary_broadcasts">Broadcasting and receiving events between applications/processes</string>

    <string name="title_data">Data</string>
    <string name="summary_data">Various was to access data within applications and the system</string>

    <string name="pref_title_providers">Providers</string>
    <string name="pref_summary_providers">Consuming data from system Content Providers</string>
    <string name="pref_title_app_provider">Application Content Provider</string>
    <string name="pref_summary_app_provider">Implementing an application-specific Content Provider</string>
    <string name="pref_title_sharing">Sharing</string>
    <string name="pref_summary_sharing">Sharing data between applications</string>

    <string name="title_system">Platform Interaction</string>
    <string name="summary_system">Interacting with the Plaform services</string>

    <string name="pref_title_inapp_billing">In-App Billing</string>
    <string name="pref_summary_inapp_billing">Integration with the Google Play services for app billing components</string>

    <!-- activities -->
    <string name="title_basic_user_interface">Basic User Interface</string>
    <string name="title_simple_list_adapter">Simple List Adapter</string>
    <string name="title_cursor_adapter">Cursor Adapter</string>
    <string name="title_view_pager">View Pager</string>
    <string name="title_fragments">Fragments</string>
    <string name="title_action_bar">Action Bar</string>
    <string name="title_intents">Intents</string>
    <string name="title_actions">Actions</string>
    <string name="title_broadcasts">Broadcasts</string>
    <string name="title_inapp_billing">In-App Billing</string>

    <!-- basic user interface example -->
    <string name="basic_user_interface_edit_content">Hint content</string>
    <string name="basic_user_interface_confirm">Confirm</string>

    <!-- simple list adapter -->
    <string name="am">Armenia</string>
    <string name="au">Australia</string>
    <string name="ca">Canada</string>
    <string name="cn">China</string>
    <string name="cz">Czech Republic</string>
    <string name="eg">Egypt</string>
    <string name="fi">Finland</string>
    <string name="fr">France</string>
    <string name="gr">Greece</string>
    <string name="ie">Ireland</string>
    <string name="it">Italy</string>
    <string name="lb">Lebanon</string>
    <string name="uk">United Kingdom</string>

    <!-- view pager -->
    <string name="view_pager_title_page_one">Red Queen</string>
    <string name="view_pager_title_page_two">Cheshire Cat</string>
    <string name="view_pager_title_page_three">Mad Hatter</string>

    <string name="view_pager_content_page_one">The Red Queen is a fictional character in Lewis Carroll\'s fantasy novella, Through the Looking-Glass. She is often confused with the Queen of Hearts from the previous book Alice\'s Adventures in Wonderland, although the two are very different.</string>
    <string name="view_pager_content_page_two">The Cheshire Cat is a fictional cat popularised by Lewis Carroll in Alice\'s Adventures in Wonderland and known for its distinctive mischievous grin.</string>
    <string name="view_pager_content_page_three">The Hatter (called Hatta in Through the Looking-Glass) is a fictional character in Lewis Carroll\'s Alice\'s Adventures in Wonderland and the story\'s sequel Through the Looking-Glass. He is often referred to as the Mad Hatter, though this term was never used by Carroll. The phrase "mad as a hatter" pre-dates Carroll\'s works and the characters the Hatter and the March Hare are initially referred to as "both mad" by the Cheshire Cat, with both first appearing in Alice\'s Adventures in Wonderland, in the seventh chapter titled "A Mad Tea-Party".</string>

    <!-- action bar -->
    <string name="label_search">Search</string>
    <string name="label_settings">Settings</string>    

    <!-- intents -->
    <string name="intents_radio_option_a">Option A</string>
    <string name="intents_radio_option_b">Option B</string>
    <string name="intents_button_start_activity">Start the Activity</string>
    <string name="intents_button_start_activity_for_result">Get
    results</string>

    <!-- actions -->
    <string name="actions_action_browse">Browse</string>
    <string name="actions_action_call">Call</string>
    <string name="actions_action_dial">Dial</string>
</resources>
