<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" >
  <PreferenceCategory android:title="@string/title_user_interface">
    <Preference
        android:key="pref_basic_user_interface"
        android:summary="@string/pref_summary_basic_user_interface"
        android:title="@string/pref_title_basic_user_interface" />
    <Preference
        android:key="pref_simple_list_adapter"
        android:summary="@string/pref_summary_simple_list_adapter"
        android:title="@string/pref_title_simple_list_adapter" />
    <Preference
        android:key="pref_fragments"
        android:summary="@string/pref_summary_fragments"
        android:title="@string/pref_title_fragments" />
    <Preference
        android:key="pref_action_bar"
        android:summary="@string/pref_summary_action_bar"
        android:title="@string/pref_title_action_bar" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/title_execution_control">
    <Preference
        android:key="pref_intents"
        android:summary="@string/pref_summary_intents"
        android:title="@string/pref_title_intents" />
    <Preference
        android:key="pref_actions"
        android:summary="@string/pref_summary_actions"
        android:title="@string/pref_title_actions" />
    <Preference
        android:key="pref_handlers"
        android:summary="@string/pref_summary_handlers"
        android:title="@string/pref_title_handlers" />
    <Preference
        android:key="pref_broadcasts"
        android:summary="@string/pref_summary_broadcasts"
        android:title="@string/pref_title_broadcasts" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/title_application_services">
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/title_platform_interop">
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/title_networking">
  </PreferenceCategory>
</PreferenceScreen>
