<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:fragment="com.macadamian.UserInterfaceExamplesFragment"
            android:title="@string/title_user_interface"
            android:summary="@string/summary_user_interface" />
    <header android:fragment="com.macadamian.ExecutionControlExamplesFragment"
            android:title="@string/title_execution_control"
            android:summary="@string/summary_execution_control" />
    <header android:fragment="com.macadamian.DataExamplesFragment"
            android:title="@string/title_data"
            android:summary="@string/summary_data" />
    <header android:fragment="com.macadamian.SystemExamplesFragment"
            android:title="@string/title_system"
            android:summary="@string/summary_system" />
</preference-headers>
